@@ -1,25 +1,0 @@
-AC_REVISION($Revision$)
-AC_INIT(Makefile.am)
-
-GLOBUS_INIT
-
-AM_PROG_LIBTOOL
-
-dnl Initialize the automake rules the last argument
-AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)
-
-LAC_DOXYGEN("../ ./", "*.dox")
-
-
-
-GLOBUS_FINALIZE
-
-AC_OUTPUT(
-	Makefile
-	pkgdata/Makefile
-	pkgdata/pkg_data_src.gpt
-	doxygen/Makefile
-	doxygen/Doxyfile
-	doxygen/Doxyfile-internal
-	version.h
-)
