@@ -1,7 +1,7 @@
 Source: globus-scheduler-event-generator
 Priority: optional
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-gram-protocol-dev, libltdl3-dev, libglobus-common-dev, libglobus-xio-gsi-driver-dev, libglobus-xio-dev, doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz
+Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-gram-protocol-dev (>= 11), libltdl3-dev, libglobus-common-dev (>= 14), libglobus-xio-gsi-driver-dev (>= 2), libglobus-xio-dev, doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz, pkg-config
 Standards-Version: 3.8.4
 Section: net
 DM-Upload-Allowed: yes
