@@ -1,6 +1,6 @@
 Name:		globus-scheduler-event-generator
 %global _name %(tr - _ <<< %{name})
-Version:	5.0
+Version:	5.1
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Scheduler Event Generator
 
@@ -28,6 +28,15 @@ BuildRequires:	doxygen
 BuildRequires:	graphviz
 %if "%{?rhel}" == "5"
 BuildRequires:	graphviz-gd
+%endif
+%if %{?fedora}%{!?fedora:0} >= 19 || %{?rhel}%{!?rhel:0} >= 7
+BuildRequires:  automake >= 1.11
+BuildRequires:  autoconf >= 2.60
+BuildRequires:  libtool >= 2.2
+%endif
+BuildRequires:  pkgconfig
+%if %{?fedora}%{!?fedora:0} >= 18 || %{?rhel}%{!?rhel:0} >= 6
+BuildRequires:  perl-Test-Simple
 %endif
 
 %package progs
@@ -114,7 +123,7 @@ Scheduler Event Generator Documentation Files
 # Remove files that should be replaced during bootstrap
 rm -rf autom4te.cache
 
-autoreconf -i
+autoreconf -if
 %endif
 
 
@@ -187,6 +196,9 @@ fi
 %{_mandir}/man3/*
 
 %changelog
+* Thu Feb 13 2014 Globus Toolkit <support@globus.org> - 5.1-1
+- Test fixes
+
 * Tue Jan 21 2014 Globus Toolkit <support@globus.org> - 5.0-1
 - Repackage for GT6 without GPT
 
