@@ -1,3 +1,9 @@
+globus-scheduler-event-generator (5.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 17:01:06 -0500
+
 globus-scheduler-event-generator (5.0-1+gt6.@distro@) @distro@; urgency=low
 
   * Repackage for GT6 without GPT
